Replace concurrent collections with faster ones in ChatRoom
Also replaced recursion with loops in ChatRoom#push